--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   font-feature-settings: 'liga';
 }
 
-.icon:hover {
+.icon.arrow:hover {
   cursor: pointer;
 }
 
@@ -93,6 +93,10 @@
   justify-content: flex-start;
 }
 
+.dayItem:hover {
+  cursor: pointer;
+}
+
 .dayItem.disabled {
   color: lightgrey;
 }
@@ -102,13 +106,52 @@
 }
 
 .number {
-  padding: 10px;
+  padding: 0.3rem;
   font-size: 0.7rem;
   position: absolute;
 }
 
 .icon.day {
-  font-size: 1rem;
+  font-size: 0.8rem;
   align-self: center;
-  margin-left: 50%;
+  margin-left: 40%;
+  padding: 4px;
+}
+
+.ReactModalPortal > div {
+  opacity: 0;
+}
+
+.ReactModalPortal .ReactModal__Overlay {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  transition: opacity 200ms ease-in-out;
+}
+
+.ReactModalPortal .ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModalPortal .ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.modal {
+  background: lightblue;
+  color: white;
+  padding: 2rem;
+  max-width: 30rem;
+  outline: none;
+  text-align: center;
+}
+
+.modal__title {
+  margin: 0 0 2rem 0;
+}
+
+.modal__body {
+  font-weight: 300;
+  font-size: 2rem;
+  word-break: break-all;
 }
