--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@import '../node_modules/semantic-ui-css/semantic.min.css';
 .icon {
     font-family: 'Material Icons', serif;
     font-size: 2rem;
@@ -109,21 +110,7 @@
 .dayItem.selected::before {
     content: '';
     width: 3px;
-    background: red;
-}
-
-.N1 {
-    background: black;
-    color: white;
-}
-
-.E3 {
-    background: navy;
-    color: white;
-}
-
-.MA {
-    background: peachpuff;
+    background: rgb(255, 0, 128);
 }
 
 .number {
@@ -137,42 +124,4 @@
     align-self: center;
     margin-left: 40%;
     padding: 4px;
-}
-
-.ReactModalPortal>div {
-    opacity: 0;
-}
-
-.ReactModalPortal .ReactModal__Overlay {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    transition: opacity 200ms ease-in-out;
-}
-
-.ReactModalPortal .ReactModal__Overlay--after-open {
-    opacity: 1;
-}
-
-.ReactModalPortal .ReactModal__Overlay--before-close {
-    opacity: 0;
-}
-
-.modal {
-    background: #f1c1a0;
-    color: white;
-    padding: 5rem;
-    max-width: 30rem;
-    outline: none;
-    text-align: center;
-}
-
-.modal__title {
-    margin: 0 0 2rem 0;
-}
-
-.modal__body {
-    font-weight: 300;
-    font-size: 2rem;
-    word-break: break-all;
 }
